# surya-portfolio

./: .gitignore  README.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml  render.yaml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: analytics.py  auth.py  blogs.py  contact.py  dashboard.py  events.py  media.py  notifications.py  projects.py  settings.py
backend/app/api/v2/: router.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/db/: redis_client.py  session.py
backend/app/middleware/: audit.py  logging.py  validation.py
backend/app/models/: __init__.py  common.py  entities.py
backend/app/schemas/: common.py
backend/app/services/: auth_service.py  crud_service.py
backend/app/tasks/: notifications.py
backend/app/utils/: cache.py  pagination.py  query.py  rate_limit.py  responses.py
backend/scripts/: export_openapi.py  freeze_validate.py  generate_demo_data.py  patch_linkedin.py  seed.py  start_production.py  upsert_case_studies.py
backend/tests/: conftest.py  test_analytics_dashboard.py  test_auth.py  test_blogs.py  test_contact_notifications.py  test_health.py  test_projects.py
collections/: bruno_collection.json  insomnia_collection.json  postman_collection.json
contracts/: api-contract.md  openapi.json  types.ts
docs/: api-integration-guide.md  deployment-checklist.md  deployment-runbook.md  (+4 more)
(+102 files in other folders)
